Address Masonry First Load Image Failures https://bugs.webkit.org/show_bug.cgi?id=251733

Reviewed by Matt Woodrow.

Masonry has been having some interesting behavior with pure images
due to heights often being incorrectly rendered as 0px. This patch
fixes the first load problem. This seems to be connected to not properly
populating grid positions.

* Source/WebCore/rendering/GridMasonryLayout.cpp:
(WebCore::GridMasonryLayout::performMasonryPlacement):

Canonical link: https://commits.webkit.org/259978@main